February 18, 2026 Update