@@ -3,7 +3,7 @@ package com.ionres.respondph.sendsms;
 import com.ionres.respondph.beneficiary.BeneficiaryModel;
 import com.ionres.respondph.common.interfaces.BulkProgressListener;
 import com.ionres.respondph.common.services.NewsGeneratorService;
-import com.ionres.respondph.common.services.NewsItem;
+import com.ionres.respondph.common.services.NewsGeneratorService.NewsItem;
 import com.ionres.respondph.main.MainFrameController;
 import com.ionres.respondph.sendsms.dialogs_controller.BeneficiarySelectionDialogController;
 import com.ionres.respondph.util.*;
@@ -30,50 +30,45 @@ import java.net.http.HttpResponse;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.ResourceBundle;
-import java.util.function.BiConsumer;
-import java.util.function.IntConsumer;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 public class SendSMSController implements Initializable {
 
     @FXML private ComboBox<String> cbSelectBeneficiary;
     @FXML private ComboBox<String> cbSelectPorts;
     @FXML private ComboBox<String> cbSelectBarangay;
-    @FXML private HBox barangaySelectionBox;
-    @FXML private TextArea txtMessage;
-    @FXML private Label charCount;
-    @FXML private Button btnSendSMS;
+    @FXML private HBox             barangaySelectionBox;
+    @FXML private TextArea         txtMessage;
+    @FXML private Label            charCount;
+    @FXML private Button           btnSendSMS;
 
-    @FXML private TableView<SmsModel> adminTable;
-    @FXML private TableColumn<SmsModel, String> dateSentColumn;
-    @FXML private TableColumn<SmsModel, String> fullNameColumn;
-    @FXML private TableColumn<SmsModel, String> msgColumn;
-    @FXML private TableColumn<SmsModel, String> statusColumn;
-    @FXML private TableColumn<SmsModel, String> phoneColumn;
-    @FXML private TableColumn<SmsModel, Void> actionsColumn;
+    @FXML private TableView<SmsModel>            adminTable;
+    @FXML private TableColumn<SmsModel, String>  dateSentColumn;
+    @FXML private TableColumn<SmsModel, String>  fullNameColumn;
+    @FXML private TableColumn<SmsModel, String>  msgColumn;
+    @FXML private TableColumn<SmsModel, String>  statusColumn;
+    @FXML private TableColumn<SmsModel, String>  phoneColumn;
+    @FXML private TableColumn<SmsModel, Void>    actionsColumn;
 
     @FXML private RadioButton rbGsm;
     @FXML private RadioButton rbApi;
-    @FXML private Label connectionStatusLabel;
-    @FXML private Button btnRefreshPorts;
+    @FXML private Label       connectionStatusLabel;
+    @FXML private Button      btnRefreshPorts;
 
-    @FXML private HBox disasterSelectionBox;
+    @FXML private HBox                    disasterSelectionBox;
     @FXML private ComboBox<DisasterModel> cbSelectDisaster;
 
     @FXML private ComboBox<String> cbNewsTopic;
-    @FXML private Button btnGenerateNews;
-    @FXML private VBox aiResponseContainer;
-    @FXML private Label aiResponseLabel;
-    @FXML private HBox aiResponseActions;
-    @FXML private Button btnUseSelectedNews;
-    @FXML private ToggleGroup newsAiResponse;
+    @FXML private Button           btnGenerateNews;
+    @FXML private VBox             aiResponseContainer;
+    @FXML private HBox             aiResponseActions;
+    @FXML private Button           btnUseSelectedNews;
+    @FXML private ToggleGroup      newsAiResponse;
 
-    @FXML private Label lblNetworkStatus;
+    @FXML private Label  lblNetworkStatus;
     @FXML private Button btnRefreshNetwork;
 
-    @FXML private VBox aiLoadingBox;
-    @FXML private ProgressIndicator piAi;
-
-    @FXML private HBox smsLoadingBox;
+    @FXML private HBox              smsLoadingBox;
     @FXML private ProgressIndicator piSms;
 
     @FXML private RadioButton rbNewsSlot1;
@@ -83,37 +78,43 @@ public class SendSMSController implements Initializable {
     @FXML private RadioButton rbNewsSlot5;
 
     @FXML private TextArea txtCustomEvacMessage;
-    @FXML private Button btnSaveEvacMessage;
-    @FXML private Label lblMessageStatus;
+    @FXML private Button   btnSaveEvacMessage;
+    @FXML private Label    lblMessageStatus;
 
+    // ── State ─────────────────────────────────────────────────────────────────
     private List<BeneficiaryModel> selectedBeneficiariesList = new ArrayList<>();
-    private final List<NewsItem> storedNewsItems = new ArrayList<>();
-    private RadioButton[] newsSlots;
+    private final List<NewsItem>   storedNewsItems           = new ArrayList<>();
+    private RadioButton[]          newsSlots;
+
+    /** Guard: prevents starting a second generation while one is in flight. */
+    private final AtomicBoolean generationInProgress = new AtomicBoolean(false);
 
     private final ObservableList<SmsModel> logRows = FXCollections.observableArrayList();
 
+    // ── Services / DAOs ───────────────────────────────────────────────────────
     private CustomEvacMessageManager evacMessageManager;
-    private SmsService smsService;
-    private SMSSender smsSender;
-    private NewsGeneratorService newsGeneratorService;
-    private BeneficiaryDAO beneficiaryDAO;
-    private DisasterDAO disasterDAO;
+    private SmsService               smsService;
+    private SMSSender                smsSender;
+    private NewsGeneratorService     newsGeneratorService;
+    private BeneficiaryDAO           beneficiaryDAO;
+    private DisasterDAO              disasterDAO;
 
-    private boolean isOpeningDialog = false;
+    // ── Dialog-open guard ─────────────────────────────────────────────────────
+    private boolean isOpeningDialog    = false;
     private boolean isUpdatingComboBox = false;
 
     private final javafx.beans.value.ChangeListener<String> portChangeListener =
             (obs, oldPort, newPort) -> {
-                if (newPort != null && !newPort.equals(oldPort) && rbGsm != null && rbGsm.isSelected()) {
+                if (newPort != null && !newPort.equals(oldPort) && rbGsm != null && rbGsm.isSelected())
                     connectToSelectedPort(newPort);
-                }
                 updateSendButtonState();
             };
 
+    // ─────────────────────────────────────────────────────────────────────────
     @Override
     public void initialize(URL location, ResourceBundle resources) {
         smsService = new SmsServiceImpl();
-        smsSender = SMSSender.getInstance();
+        smsSender  = SMSSender.getInstance();
 
         try {
             newsGeneratorService = new NewsGeneratorService();
@@ -123,9 +124,11 @@ public class SendSMSController implements Initializable {
         }
 
         beneficiaryDAO = new BeneficiaryDAOImpl();
-        disasterDAO = new DisasterDAOImpl();
+        disasterDAO    = new DisasterDAOImpl();
 
-        newsSlots = new RadioButton[]{rbNewsSlot1, rbNewsSlot2, rbNewsSlot3, rbNewsSlot4, rbNewsSlot5};
+        newsSlots = new RadioButton[]{
+                rbNewsSlot1, rbNewsSlot2, rbNewsSlot3, rbNewsSlot4, rbNewsSlot5
+        };
 
         Platform.runLater(this::bindAiSlotWidths);
 
@@ -141,31 +144,31 @@ public class SendSMSController implements Initializable {
 
         evacMessageManager = CustomEvacMessageManager.getInstance();
 
-        if (charCount != null) {
-            charCount.setText("0/320 characters");
-        }
+        if (charCount != null) charCount.setText("0/320 characters");
 
         updateConnectionStatus();
         loadExistingEvacMessage();
-        System.out.println("SendSMSController initialized successfully");
     }
+
+    // ─────────────────────────────────────────────────────────────────────────
+    // AI SLOT LAYOUT
+    // ─────────────────────────────────────────────────────────────────────────
 
     private void bindAiSlotWidths() {
         if (aiResponseContainer == null) return;
-
         aiResponseContainer.setFillWidth(true);
-
         double paddingLR = 40;
-
         for (RadioButton rb : newsSlots) {
             if (rb == null) continue;
-
             rb.setMaxWidth(Double.MAX_VALUE);
             rb.setMinWidth(0);
-
             rb.prefWidthProperty().bind(aiResponseContainer.widthProperty().subtract(paddingLR));
         }
     }
+
+    // ─────────────────────────────────────────────────────────────────────────
+    // NEWS SLOTS
+    // ─────────────────────────────────────────────────────────────────────────
 
     private void setupNewsSlots() {
         if (newsAiResponse == null) newsAiResponse = new ToggleGroup();
@@ -176,37 +179,33 @@ public class SendSMSController implements Initializable {
             if (slot == null) continue;
 
             slot.setToggleGroup(newsAiResponse);
-
             slot.getStyleClass().add("ai-news-slot");
-
             slot.setWrapText(true);
             slot.setAlignment(Pos.TOP_LEFT);
             slot.setTextOverrun(OverrunStyle.CLIP);
             slot.setMinHeight(Region.USE_PREF_SIZE);
             slot.setPrefHeight(Region.USE_COMPUTED_SIZE);
             slot.setMaxHeight(Double.MAX_VALUE);
-
             slot.setDisable(true);
 
-            // When selected, load SMS text only (no url) into message box
             slot.selectedProperty().addListener((obs, wasSelected, isSelected) -> {
-                if (isSelected && index < storedNewsItems.size()) {
+                if (isSelected && index < storedNewsItems.size())
                     loadNewsToMessage(index);
-                }
             });
         }
     }
 
+    /**
+     * Populates slot {@code slotIndex} with the given news item.
+     * The SMS text is shown as a label and the URL as a double-click hyperlink.
+     */
     private void updateNewsSlot(int slotIndex, NewsItem item) {
         if (slotIndex < 0 || slotIndex >= newsSlots.length) return;
         RadioButton slot = newsSlots[slotIndex];
         if (slot == null || item == null) return;
 
-        // ✅ compute a wrapping width based on the RB width
-        // (some extra space for the radio circle + padding)
         double leftIndent = 38;
 
-        // SMS text label
         Label sms = new Label(item.smsText());
         sms.setWrapText(true);
         sms.setMaxWidth(Double.MAX_VALUE);
@@ -214,30 +213,25 @@ public class SendSMSController implements Initializable {
         Hyperlink link = new Hyperlink(item.url());
         link.setWrapText(true);
         link.setMaxWidth(Double.MAX_VALUE);
-        link.setOnMouseClicked(event -> {
-            if (event.getClickCount() == 2) {
-                openInBrowser(item.url());
-            }
-        });
+        link.setOnMouseClicked(ev -> { if (ev.getClickCount() == 2) openInBrowser(item.url()); });
 
         VBox box = new VBox(6, sms, link);
         box.setFillWidth(true);
         box.setMaxWidth(Double.MAX_VALUE);
-
         box.prefWidthProperty().bind(slot.widthProperty().subtract(leftIndent));
         sms.prefWidthProperty().bind(box.prefWidthProperty());
         link.prefWidthProperty().bind(box.prefWidthProperty());
 
-        slot.setText(""); // ✅ prevent RB text from affecting layout
+        slot.setText("");
         slot.setGraphic(box);
         slot.setContentDisplay(ContentDisplay.GRAPHIC_ONLY);
         slot.setDisable(false);
 
+        // Auto-select the first slot so its text pre-fills the message box
         if (slotIndex == 0) slot.setSelected(true);
     }
 
-
-
+    /** Resets all 5 radio-button slots to their empty placeholder state. */
     private void clearNewsSlots() {
         for (int i = 0; i < newsSlots.length; i++) {
             RadioButton slot = newsSlots[i];
@@ -251,51 +245,45 @@ public class SendSMSController implements Initializable {
         }
     }
 
-
     private void loadNewsToMessage(int slotIndex) {
         if (slotIndex < 0 || slotIndex >= storedNewsItems.size() || txtMessage == null) return;
         String smsText = storedNewsItems.get(slotIndex).smsText();
-        if (smsText == null) return;
-        txtMessage.setText(smsText.trim());
+        if (smsText != null) txtMessage.setText(smsText.trim());
     }
 
     private void openInBrowser(String url) {
         if (url == null || url.isBlank()) return;
-
         try {
-            if (Desktop.isDesktopSupported()) {
+            if (Desktop.isDesktopSupported())
                 Desktop.getDesktop().browse(URI.create(url));
-            } else {
+            else
                 AlertDialogManager.showWarning("Not Supported", "Cannot open browser on this system.");
-            }
         } catch (Exception e) {
             AlertDialogManager.showError("Open Link Failed",
-                    "Could not open link:\n" + url + "\n\n" + e.getMessage());
+                    "Could not open:\n" + url + "\n\n" + e.getMessage());
         }
     }
 
-    // =======================================================
-    // RADIO BUTTONS / CONNECTION
-    // =======================================================
+    // ─────────────────────────────────────────────────────────────────────────
+    // RADIO BUTTONS / GSM CONNECTION
+    // ─────────────────────────────────────────────────────────────────────────
+
     private void setupRadioButtons() {
         if (rbApi != null) {
             rbApi.selectedProperty().addListener((obs, old, selected) -> {
-                if (cbSelectPorts != null) cbSelectPorts.setDisable(selected);
+                if (cbSelectPorts   != null) cbSelectPorts.setDisable(selected);
                 if (btnRefreshPorts != null) btnRefreshPorts.setDisable(selected);
                 updateSendButtonState();
                 updateConnectionStatus();
             });
         }
-
         if (rbGsm != null) {
             rbGsm.selectedProperty().addListener((obs, old, selected) -> {
                 if (!selected) return;
-                if (cbSelectPorts != null) {
-                    String port = cbSelectPorts.getSelectionModel().getSelectedItem();
-                    if (port != null && !port.contains("No") && !port.contains("Error")) {
-                        connectToSelectedPort(port);
-                    }
-                }
+                String port = (cbSelectPorts != null)
+                        ? cbSelectPorts.getSelectionModel().getSelectedItem() : null;
+                if (port != null && !port.contains("No") && !port.contains("Error"))
+                    connectToSelectedPort(port);
                 updateSendButtonState();
             });
         }
@@ -303,11 +291,9 @@ public class SendSMSController implements Initializable {
 
     private void populateAvailablePorts() {
         if (cbSelectPorts == null) return;
-
         Platform.runLater(() -> {
             try {
                 List<String> ports = smsSender.getAvailablePorts();
-
                 if (ports.isEmpty()) {
                     cbSelectPorts.setItems(FXCollections.observableArrayList("No ports available"));
                     cbSelectPorts.setDisable(true);
@@ -326,8 +312,8 @@ public class SendSMSController implements Initializable {
                         cbSelectPorts.getSelectionModel().selectFirst();
                         updateConnectionLabel("Disconnected", "orange");
                     }
-
-                    cbSelectPorts.getSelectionModel().selectedItemProperty().addListener(portChangeListener);
+                    cbSelectPorts.getSelectionModel().selectedItemProperty()
+                            .addListener(portChangeListener);
                 }
             } catch (Exception e) {
                 cbSelectPorts.setItems(FXCollections.observableArrayList("Error detecting ports"));
@@ -340,15 +326,13 @@ public class SendSMSController implements Initializable {
     }
 
     private void connectToSelectedPort(String portName) {
-        if (portName == null || portName.isEmpty() || portName.contains("No") || portName.contains("Error")) {
-            return;
-        }
+        if (portName == null || portName.isEmpty()
+                || portName.contains("No") || portName.contains("Error")) return;
 
         new Thread(() -> {
-            boolean success = smsSender.connectToPort(portName, 5000);
-
+            boolean ok = smsSender.connectToPort(portName, 5000);
             Platform.runLater(() -> {
-                if (success) {
+                if (ok) {
                     updateConnectionLabel("Connected to " + portName, "green");
                     AlertDialogManager.showSuccess("Success", "Connected to GSM modem on " + portName);
                 } else {
@@ -370,7 +354,6 @@ public class SendSMSController implements Initializable {
 
     private void updateConnectionStatus() {
         if (connectionStatusLabel == null) return;
-
         if (rbApi != null && rbApi.isSelected()) {
             connectionStatusLabel.setText("Using SMS API");
             connectionStatusLabel.setStyle("-fx-text-fill: blue;");
@@ -386,9 +369,10 @@ public class SendSMSController implements Initializable {
         }
     }
 
-    // =======================================================
-    // TABLE / LOGS
-    // =======================================================
+    // ─────────────────────────────────────────────────────────────────────────
+    // TABLE / SMS LOGS
+    // ─────────────────────────────────────────────────────────────────────────
+
     private void loadSMSLogs() {
         try {
             List<SmsModel> logs = smsService.getAllSMSLogs();
@@ -396,9 +380,7 @@ public class SendSMSController implements Initializable {
                 logRows.setAll(logs);
                 if (adminTable != null) adminTable.setItems(logRows);
             }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+        } catch (Exception e) { e.printStackTrace(); }
     }
 
     private void setupControls() {
@@ -407,98 +389,51 @@ public class SendSMSController implements Initializable {
         populateComboBoxes();
     }
 
-    private void setupNewsControls() {
-        if (newsAiResponse == null) newsAiResponse = new ToggleGroup();
-
-        boolean aiEnabled = newsGeneratorService != null;
-
-        if (aiResponseContainer != null) {
-            aiResponseContainer.setVisible(false);
-            aiResponseContainer.setManaged(false);
-        }
-
-        if (btnUseSelectedNews != null) {
-            btnUseSelectedNews.setVisible(false);
-            btnUseSelectedNews.setManaged(false);
-            btnUseSelectedNews.setDisable(true);
-            btnUseSelectedNews.setOnAction(e -> onUseSelectedNews());
-        }
-
-        if (btnGenerateNews != null) {
-            btnGenerateNews.setDisable(!aiEnabled);
-            btnGenerateNews.setOnAction(e -> onGenerateNews());
-        }
-
-        if (cbNewsTopic != null) {
-            cbNewsTopic.setDisable(!aiEnabled);
-        }
-
-        if (btnSaveEvacMessage != null) {
-            btnSaveEvacMessage.setOnAction(e -> onSaveEvacMessage());
-        }
-
-        updateAiResponseVisibility(false);
-    }
-
     private void setupTableColumns() {
-        if (dateSentColumn != null) {
+        if (dateSentColumn != null)
             dateSentColumn.setCellValueFactory(cell -> {
                 SmsModel m = cell.getValue();
-                return new SimpleStringProperty(m != null && m.getDateSent() != null ? m.getDateSent().toString() : "");
+                return new SimpleStringProperty(
+                        m != null && m.getDateSent() != null ? m.getDateSent().toString() : "");
             });
-        }
-        if (fullNameColumn != null) {
-            fullNameColumn.setCellValueFactory(new PropertyValueFactory<>("fullname"));
-        }
-        if (msgColumn != null) {
-            msgColumn.setCellValueFactory(new PropertyValueFactory<>("message"));
-        }
-        if (statusColumn != null) {
-            statusColumn.setCellValueFactory(new PropertyValueFactory<>("status"));
-        }
-        if (phoneColumn != null) {
+        if (fullNameColumn != null) fullNameColumn.setCellValueFactory(new PropertyValueFactory<>("fullname"));
+        if (msgColumn      != null) msgColumn.setCellValueFactory(new PropertyValueFactory<>("message"));
+        if (statusColumn   != null) statusColumn.setCellValueFactory(new PropertyValueFactory<>("status"));
+        if (phoneColumn    != null)
             phoneColumn.setCellValueFactory(cell -> {
                 SmsModel m = cell.getValue();
                 return new SimpleStringProperty(m != null ? m.getPhoneString() : "");
             });
-        }
 
         if (actionsColumn != null) {
             actionsColumn.setCellFactory(col -> new TableCell<>() {
                 private final Button resendBtn = new Button("Resend");
-
                 {
                     resendBtn.setOnAction(e -> {
                         SmsModel row = getTableRow().getItem();
                         if (row == null) return;
-
                         resendBtn.setDisable(true);
                         String method = (rbApi != null && rbApi.isSelected()) ? "API" : "GSM";
 
                         Task<Boolean> task = new Task<>() {
-                            @Override
-                            protected Boolean call() {
+                            @Override protected Boolean call() {
                                 return smsService.resendSMS(row, method);
                             }
                         };
-
                         task.setOnSucceeded(ev -> Platform.runLater(() -> {
                             boolean ok = task.getValue();
                             row.setStatus(ok ? "SENT" : "FAILED");
                             adminTable.refresh();
                             resendBtn.setDisable(ok);
-                            AlertDialogManager.showInfo(
-                                    ok ? "Success" : "Failed",
+                            AlertDialogManager.showInfo(ok ? "Success" : "Failed",
                                     ok ? "SMS resent successfully." : "Failed to resend SMS.");
                         }));
-
                         task.setOnFailed(ev -> Platform.runLater(() -> {
                             row.setStatus("FAILED");
                             adminTable.refresh();
                             resendBtn.setDisable(false);
                             AlertDialogManager.showError("Error", "Resend task failed.");
                         }));
-
                         new Thread(task).start();
                     });
                 }
@@ -507,10 +442,8 @@ public class SendSMSController implements Initializable {
                 protected void updateItem(Void item, boolean empty) {
                     super.updateItem(item, empty);
                     if (empty || getTableRow() == null || getTableRow().getItem() == null) {
-                        setGraphic(null);
-                        return;
+                        setGraphic(null); return;
                     }
-
                     SmsModel row = getTableRow().getItem();
                     resendBtn.setDisable("SENT".equalsIgnoreCase(row.getStatus()));
                     setGraphic(resendBtn);
@@ -520,48 +453,13 @@ public class SendSMSController implements Initializable {
     }
 
     private void setupEventHandlers() {
-        if (btnSendSMS != null) btnSendSMS.setOnAction(e -> onSendSMS());
-        if (txtMessage != null) {
-            txtMessage.textProperty().addListener((obs, old, newVal) -> {
-                int len = (newVal != null) ? newVal.length() : 0;
-                if (charCount != null) charCount.setText(len + "/320 characters");
-            });
-        }
-        if (btnRefreshPorts != null) btnRefreshPorts.setOnAction(e -> populateAvailablePorts());
+        if (btnSendSMS  != null) btnSendSMS.setOnAction(e -> onSendSMS());
+        if (txtMessage  != null) txtMessage.textProperty().addListener((obs, old, val) -> {
+            int len = (val != null) ? val.length() : 0;
+            if (charCount != null) charCount.setText(len + "/320 characters");
+        });
+        if (btnRefreshPorts   != null) btnRefreshPorts.setOnAction(e -> populateAvailablePorts());
         if (btnRefreshNetwork != null) btnRefreshNetwork.setOnAction(e -> checkNetworkStatus());
-    }
-
-    private void checkNetworkStatus() {
-        if (lblNetworkStatus == null) return;
-
-        Task<Boolean> task = new Task<>() {
-            @Override
-            protected Boolean call() throws Exception {
-                HttpClient client = HttpClient.newBuilder()
-                        .connectTimeout(java.time.Duration.ofSeconds(5))
-                        .build();
-                HttpRequest req = HttpRequest.newBuilder()
-                        .uri(URI.create("https://www.google.com"))
-                        .method("HEAD", HttpRequest.BodyPublishers.noBody())
-                        .timeout(java.time.Duration.ofSeconds(5))
-                        .build();
-                HttpResponse<Void> resp = client.send(req, HttpResponse.BodyHandlers.discarding());
-                return resp.statusCode() >= 200 && resp.statusCode() < 400;
-            }
-        };
-
-        task.setOnSucceeded(e -> Platform.runLater(() ->
-                updateNetworkLabel(Boolean.TRUE.equals(task.getValue()))));
-
-        task.setOnFailed(e -> Platform.runLater(() -> updateNetworkLabel(false)));
-
-        new Thread(task, "Network-Check-Thread").start();
-    }
-
-    private void updateNetworkLabel(boolean online) {
-        if (lblNetworkStatus == null) return;
-        lblNetworkStatus.setText(online ? "Online" : "Offline - Internet required for AI");
-        lblNetworkStatus.setStyle("-fx-text-fill: " + (online ? "#22c55e;" : "#ef4444;"));
     }
 
     private void populateComboBoxes() {
@@ -579,114 +477,144 @@ public class SendSMSController implements Initializable {
         }
     }
 
-    // =======================================================
-    // CUSTOM EVAC MESSAGE
-    // =======================================================
-    private void loadExistingEvacMessage() {
-        System.out.println("=== Loading Custom Evacuation Message ===");
+    // ─────────────────────────────────────────────────────────────────────────
+    // NEWS CONTROLS SETUP
+    // ─────────────────────────────────────────────────────────────────────────
 
-        if (txtCustomEvacMessage == null) {
-            System.out.println("❌ txtCustomEvacMessage is NULL!");
-            return;
+    private void setupNewsControls() {
+        if (newsAiResponse == null) newsAiResponse = new ToggleGroup();
+
+        boolean aiEnabled = newsGeneratorService != null;
+
+        // Start collapsed — shown after successful generation
+        updateAiResponseVisibility(false);
+
+        if (btnUseSelectedNews != null) {
+            btnUseSelectedNews.setOnAction(e -> onUseSelectedNews());
         }
+        if (btnGenerateNews != null) {
+            btnGenerateNews.setDisable(!aiEnabled);
+            btnGenerateNews.setOnAction(e -> onGenerateNews());
+        }
+        if (cbNewsTopic != null) {
+            cbNewsTopic.setDisable(!aiEnabled);
+        }
+        if (btnSaveEvacMessage != null) {
+            btnSaveEvacMessage.setOnAction(e -> onSaveEvacMessage());
+        }
+    }
 
-        boolean hasMessage = evacMessageManager.hasCustomMessage();
-        System.out.println("Database has custom message: " + hasMessage);
+    // ─────────────────────────────────────────────────────────────────────────
+    // NETWORK STATUS
+    // ─────────────────────────────────────────────────────────────────────────
 
-        if (hasMessage) {
-            String savedMessage = evacMessageManager.getCustomEvacuationMessage();
-            System.out.println("Message from DB: " + savedMessage.substring(0, Math.min(50, savedMessage.length())) + "...");
-            System.out.println("Message length: " + savedMessage.length());
+    private void checkNetworkStatus() {
+        if (lblNetworkStatus == null) return;
+        Task<Boolean> task = new Task<>() {
+            @Override protected Boolean call() throws Exception {
+                HttpClient client = HttpClient.newBuilder()
+                        .connectTimeout(java.time.Duration.ofSeconds(5)).build();
+                HttpRequest req = HttpRequest.newBuilder()
+                        .uri(URI.create("https://www.google.com"))
+                        .method("HEAD", HttpRequest.BodyPublishers.noBody())
+                        .timeout(java.time.Duration.ofSeconds(5))
+                        .build();
+                HttpResponse<Void> resp = client.send(req, HttpResponse.BodyHandlers.discarding());
+                return resp.statusCode() >= 200 && resp.statusCode() < 400;
+            }
+        };
+        task.setOnSucceeded(e -> Platform.runLater(() ->
+                updateNetworkLabel(Boolean.TRUE.equals(task.getValue()))));
+        task.setOnFailed(e -> Platform.runLater(() -> updateNetworkLabel(false)));
+        new Thread(task, "Network-Check-Thread").start();
+    }
 
-            txtCustomEvacMessage.setText(savedMessage);
-            updateEvacMessageStatus(true, savedMessage.length());
+    private void updateNetworkLabel(boolean online) {
+        if (lblNetworkStatus == null) return;
+        lblNetworkStatus.setText(online ? "Online" : "Offline - Internet required for AI");
+        lblNetworkStatus.setStyle("-fx-text-fill: " + (online ? "#22c55e;" : "#ef4444;"));
+    }
 
-            System.out.println("✓ Custom message loaded successfully");
+    // ─────────────────────────────────────────────────────────────────────────
+    // CUSTOM EVAC MESSAGE
+    // ─────────────────────────────────────────────────────────────────────────
+
+    private void loadExistingEvacMessage() {
+        if (txtCustomEvacMessage == null) return;
+        if (evacMessageManager.hasCustomMessage()) {
+            String msg = evacMessageManager.getCustomEvacuationMessage();
+            txtCustomEvacMessage.setText(msg);
+            updateEvacMessageStatus(true, msg.length());
         } else {
             txtCustomEvacMessage.clear();
             updateEvacMessageStatus(false, 0);
-            System.out.println("ℹ No custom message - using default");
         }
-
-        System.out.println("==========================================");
     }
 
-    @FXML
-    private void onSaveEvacMessage() {
+    @FXML private void onSaveEvacMessage() {
         String message = txtCustomEvacMessage != null ? txtCustomEvacMessage.getText() : null;
-
         if (message == null || message.trim().isEmpty()) {
             AlertDialogManager.showWarning("Empty Message",
                     "Please enter a custom evacuation message before saving.");
             return;
         }
-
         if (message.length() > 320) {
             AlertDialogManager.showWarning("Message Too Long",
-                    "Message is " + message.length() + " characters. SMS messages are typically limited to 320 characters.\n\n" +
-                            "Your message may be split into multiple SMS or truncated.");
+                    "Message is " + message.length() + " characters. "
+                            + "SMS messages are limited to 320 characters and may be split.");
         }
-
         if (!message.contains("{name}") && !message.contains("{evacSite}") && !message.contains("{site}")) {
             boolean proceed = AlertDialogManager.showConfirmation(
                     "Missing Placeholders",
-                    "Your message doesn't contain placeholders\n\n"
-                            + "Recommended placeholders: {name}, {evacSite}\n\n"
-                            + "Continue saving anyway?",
-                    ButtonType.OK,
-                    ButtonType.CANCEL
+                    "Your message doesn't contain placeholders.\n\n"
+                            + "Recommended: {name}, {evacSite}\n\nContinue saving anyway?",
+                    ButtonType.OK, ButtonType.CANCEL
             );
             if (!proceed) return;
         }
-
         evacMessageManager.setCustomEvacuationMessage(message.trim());
         updateEvacMessageStatus(true, message.trim().length());
-
-        System.out.println("Custom evacuation SMS message saved: " + message.trim());
         AlertDialogManager.showSuccess("Message Saved",
-                "Custom evacuation message template has been saved successfully.\n\n" +
-                        "This message will be used when allocating beneficiaries to evacuation sites.");
+                "Custom evacuation message saved successfully.\n"
+                        + "It will be used when allocating beneficiaries to evacuation sites.");
     }
 
     private void updateEvacMessageStatus(boolean saved, int length) {
-        if (lblMessageStatus != null) {
-            if (saved) {
-                lblMessageStatus.setText("✓ Custom evacuation message saved (" + length + " characters)");
-                lblMessageStatus.setStyle("-fx-text-fill: green; -fx-font-weight: bold;");
-            } else {
-                lblMessageStatus.setText("No custom evacuation message set (using default format)");
-                lblMessageStatus.setStyle("-fx-text-fill: #6c757d; -fx-font-style: italic;");
-            }
+        if (lblMessageStatus == null) return;
+        if (saved) {
+            lblMessageStatus.setText("✓ Custom evacuation message saved (" + length + " characters)");
+            lblMessageStatus.setStyle("-fx-text-fill: green; -fx-font-weight: bold;");
+        } else {
+            lblMessageStatus.setText("No custom evacuation message set (using default format)");
+            lblMessageStatus.setStyle("-fx-text-fill: #6c757d; -fx-font-style: italic;");
         }
     }
 
-    // =======================================================
-    // RECIPIENT GROUP CHANGES
-    // =======================================================
+    // ─────────────────────────────────────────────────────────────────────────
+    // RECIPIENT GROUP SELECTION
+    // ─────────────────────────────────────────────────────────────────────────
+
     private void onRecipientGroupChanged() {
         if (isUpdatingComboBox || isOpeningDialog) return;
-
         String group = (cbSelectBeneficiary != null) ? cbSelectBeneficiary.getValue() : null;
         if (group == null) return;
 
-        if ("By Barangay".equals(group)) {
-            showBarangaySelection(true);
-            showDisasterSelection(false);
-        } else if ("By Disaster Area".equals(group)) {
-            showBarangaySelection(false);
-            showDisasterSelection(true);
-            if (cbSelectDisaster != null && cbSelectDisaster.getItems().isEmpty()) {
-                loadDisasters();
+        switch (group) {
+            case "By Barangay" -> {
+                showBarangaySelection(true);
+                showDisasterSelection(false);
             }
-        } else if (group.startsWith("Selected Beneficiaries")) {
-            showBarangaySelection(false);
-            showDisasterSelection(false);
-            openBeneficiarySelectionDialog();
-        } else {
-            showBarangaySelection(false);
-            showDisasterSelection(false);
+            case "By Disaster Area" -> {
+                showBarangaySelection(false);
+                showDisasterSelection(true);
+                if (cbSelectDisaster != null && cbSelectDisaster.getItems().isEmpty()) loadDisasters();
+            }
+            default -> {
+                showBarangaySelection(false);
+                showDisasterSelection(false);
+                if (group.startsWith("Selected Beneficiaries")) openBeneficiarySelectionDialog();
+            }
         }
-
         updateSendButtonState();
     }
 
@@ -695,9 +623,8 @@ public class SendSMSController implements Initializable {
             barangaySelectionBox.setVisible(show);
             barangaySelectionBox.setManaged(show);
         }
-        if (show && cbSelectBarangay != null && cbSelectBarangay.getItems().isEmpty()) {
+        if (show && cbSelectBarangay != null && cbSelectBarangay.getItems().isEmpty())
             loadBarangayList();
-        }
     }
 
     private void showDisasterSelection(boolean show) {
@@ -711,9 +638,7 @@ public class SendSMSController implements Initializable {
         try {
             List<DisasterModel> disasters = disasterDAO.getAllDisasters();
             if (cbSelectDisaster != null) cbSelectDisaster.getItems().setAll(disasters);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+        } catch (Exception e) { e.printStackTrace(); }
     }
 
     public void loadBarangayList() {
@@ -723,9 +648,8 @@ public class SendSMSController implements Initializable {
                 Platform.runLater(() -> {
                     if (cbSelectBarangay != null) {
                         cbSelectBarangay.setItems(FXCollections.observableArrayList(barangays));
-                        if (barangays.isEmpty()) {
+                        if (barangays.isEmpty())
                             AlertDialogManager.showError("No Barangays", "No barangays found.");
-                        }
                     }
                 });
             } catch (Exception e) {
@@ -736,41 +660,30 @@ public class SendSMSController implements Initializable {
         }, "LoadBarangayThread").start();
     }
 
-    // =======================================================
+    // ─────────────────────────────────────────────────────────────────────────
     // BENEFICIARY SELECTION DIALOG
-    // =======================================================
+    // ─────────────────────────────────────────────────────────────────────────
+
     private void openBeneficiarySelectionDialog() {
         if (isOpeningDialog) return;
         isOpeningDialog = true;
-
         try {
             List<BeneficiaryModel> all = beneficiaryDAO.getAllBeneficiaries();
             if (all == null || all.isEmpty()) {
                 AlertDialogManager.showWarning("No Beneficiaries", "Add beneficiaries first.");
                 return;
             }
-
             BeneficiarySelectionDialogController ctrl =
                     DialogManager.getController("selection", BeneficiarySelectionDialogController.class);
-
             ctrl.resetState();
-
-            if (!ctrl.isLoaded()) {
-                ctrl.setBeneficiaries(all);
-            }
-
-            if (!selectedBeneficiariesList.isEmpty()) {
+            if (!ctrl.isLoaded()) ctrl.setBeneficiaries(all);
+            if (!selectedBeneficiariesList.isEmpty())
                 ctrl.setPreselectedBeneficiaries(selectedBeneficiariesList);
-            }
 
             DialogManager.show("selection");
 
-            if (ctrl.isOkClicked()) {
-                updateSelectedBeneficiaries(ctrl.getSelectedBeneficiaries());
-            } else {
-                handleDialogCancelled();
-            }
-
+            if (ctrl.isOkClicked()) updateSelectedBeneficiaries(ctrl.getSelectedBeneficiaries());
+            else                    handleDialogCancelled();
         } catch (Exception e) {
             e.printStackTrace();
             AlertDialogManager.showError("Dialog Error", "Failed to open selection dialog.");
@@ -785,158 +698,136 @@ public class SendSMSController implements Initializable {
         isUpdatingComboBox = true;
         try {
             selectedBeneficiariesList = (selected != null) ? new ArrayList<>(selected) : new ArrayList<>();
-
-            String text = String.format("Selected Beneficiaries (%d selected)", selectedBeneficiariesList.size());
-
-            if (cbSelectBeneficiary != null) {
-                ObservableList<String> items = cbSelectBeneficiary.getItems();
-                for (int i = 0; i < items.size(); i++) {
-                    if (items.get(i).startsWith("Selected Beneficiaries")) {
-                        items.set(i, text);
-                        cbSelectBeneficiary.getSelectionModel().select(i);
-                        break;
-                    }
-                }
-            }
+            String text = "Selected Beneficiaries (%d selected)".formatted(selectedBeneficiariesList.size());
+            updateComboEntry(text);
         } finally {
-            Platform.runLater(() -> {
-                isUpdatingComboBox = false;
-                updateSendButtonState();
-            });
+            Platform.runLater(() -> { isUpdatingComboBox = false; updateSendButtonState(); });
         }
     }
 
     private void handleDialogCancelled() {
         isUpdatingComboBox = true;
         try {
-            if (cbSelectBeneficiary != null) {
-                if (selectedBeneficiariesList.isEmpty()) {
-                    cbSelectBeneficiary.getSelectionModel().selectFirst();
-                } else {
-                    String text = String.format("Selected Beneficiaries (%d selected)", selectedBeneficiariesList.size());
-                    ObservableList<String> items = cbSelectBeneficiary.getItems();
-                    for (int i = 0; i < items.size(); i++) {
-                        if (items.get(i).startsWith("Selected Beneficiaries")) {
-                            items.set(i, text);
-                            cbSelectBeneficiary.getSelectionModel().select(i);
-                            break;
-                        }
-                    }
-                }
+            if (selectedBeneficiariesList.isEmpty()) {
+                if (cbSelectBeneficiary != null) cbSelectBeneficiary.getSelectionModel().selectFirst();
+            } else {
+                updateComboEntry("Selected Beneficiaries (%d selected)".formatted(selectedBeneficiariesList.size()));
             }
         } finally {
-            Platform.runLater(() -> {
-                isUpdatingComboBox = false;
-                updateSendButtonState();
-            });
+            Platform.runLater(() -> { isUpdatingComboBox = false; updateSendButtonState(); });
         }
     }
+
+    /** Updates the "Selected Beneficiaries" entry text in the combo box. */
+    private void updateComboEntry(String text) {
+        if (cbSelectBeneficiary == null) return;
+        ObservableList<String> items = cbSelectBeneficiary.getItems();
+        for (int i = 0; i < items.size(); i++) {
+            if (items.get(i).startsWith("Selected Beneficiaries")) {
+                items.set(i, text);
+                cbSelectBeneficiary.getSelectionModel().select(i);
+                return;
+            }
+        }
+    }
+
+    // ─────────────────────────────────────────────────────────────────────────
+    // AI NEWS GENERATION
+    // ─────────────────────────────────────────────────────────────────────────
 
     @FXML
     private void onGenerateNews() {
         if (cbNewsTopic == null || btnGenerateNews == null) return;
 
+        // Guard against double-clicks / re-entry
+        if (!generationInProgress.compareAndSet(false, true)) return;
+
         if (newsGeneratorService == null) {
+            generationInProgress.set(false);
             AlertDialogManager.showError("AI Disabled",
-                    "Missing GEMINI_API_KEY.\nSet GEMINI_API_KEY then restart.");
+                    "Missing GEMINI_API_KEY.\nSet the environment variable and restart.");
             return;
         }
-
         if (!InternetConnectionChecker.isOnline()) {
-            AlertDialogManager.showError("Offline", "Internet required for AI news generation.");
+            generationInProgress.set(false);
+            AlertDialogManager.showError("Offline", "Internet connection required for AI news generation.");
             return;
         }
 
         String topic = cbNewsTopic.getSelectionModel().getSelectedItem();
         if (topic == null || topic.trim().isEmpty()) {
+            generationInProgress.set(false);
             AlertDialogManager.showWarning("Topic Required", "Please select a news topic.");
             return;
         }
 
+        // ── Reset UI ──────────────────────────────────────────────────────────
         storedNewsItems.clear();
         clearNewsSlots();
         updateAiResponseVisibility(false);
 
-        btnGenerateNews.setDisable(true);
-        cbNewsTopic.setDisable(true);
-
         MainFrameController main = MainFrameController.getInstance();
-        if (main != null) main.showNewsProgress(topic);
+        if (main != null) {
+            main.setNewsCancelAction(() -> newsGeneratorService.cancelCurrentGeneration());
+            main.showNewsProgress(topic);
+        }
 
-        // Bar moves ONLY when a complete item line lands in the stream.
-        // setNewsProgress has its own FX thread guard so this is safe.
-        BiConsumer<Double, String> onProgress = (progress, status) ->
-                Platform.runLater(() -> {
-                    if (main != null) main.setNewsProgress(progress, status);
-                });
-
-        // Single call — no count param, service hardcodes TARGET = 5
         newsGeneratorService
-                .generateNewsHeadlines(topic, onProgress)
+                .generateNewsHeadlines(topic, (progress, status) ->
+                        Platform.runLater(() -> { if (main != null) main.setNewsProgress(progress, status); }))
                 .whenComplete((result, ex) -> Platform.runLater(() -> {
 
-                    btnGenerateNews.setDisable(false);
-                    cbNewsTopic.setDisable(false);
+                    // ── Always restore UI ─────────────────────────────────────────
+                    generationInProgress.set(false);
 
-                    if (main != null) main.hideNewsProgress();
+                    if (main != null) {
+                        main.setNewsCancelAction(null);
+                        main.hideNewsProgress();
+                    }
 
+                    // ── Error path ────────────────────────────────────────────────
                     if (ex != null) {
                         ex.printStackTrace();
                         AlertDialogManager.showError("AI Error",
-                                "News generation failed:\n" + ex.getMessage());
+                                "News generation failed:\n" + ex.getCause() != null
+                                        ? ex.getCause().getMessage()
+                                        : ex.getMessage());
                         return;
                     }
 
-                    if (result == null || result.isEmpty()) {
-                        AlertDialogManager.showWarning("No News",
-                                "No valid headlines generated. Try a different topic.");
-                        return;
-                    }
+                    // ── Empty = cancelled or zero results ─────────────────────────
+                    // (toast already showed "Cancelled." — no extra dialog needed)
+                    if (result == null || result.isEmpty()) return;
 
-                    storedNewsItems.clear();
+                    // ── Populate slots ────────────────────────────────────────────
                     storedNewsItems.addAll(result);
-
                     int n = Math.min(storedNewsItems.size(), newsSlots.length);
                     for (int i = 0; i < n; i++) updateNewsSlot(i, storedNewsItems.get(i));
 
                     updateAiResponseVisibility(true);
-                    AlertDialogManager.showSuccess("Success",
-                            "Generated " + n + " of 5 news items.");
+
+                    // Only alert if we got fewer than TARGET (5)
+                    if (n < 5) {
+                        AlertDialogManager.showInfo("Partial Results",
+                                "Generated " + n + " of 5 news items.\n"
+                                        + "Some articles could not be verified or found.");
+                    } else {
+                        AlertDialogManager.showSuccess("Success", "5 verified news items generated.");
+                    }
                 }));
-    }
-
-
-    private String getProgressStatusText(int progress) {
-        if (progress == 0) return "Initializing";
-        if (progress <= 10) return "Connecting to AI";
-        if (progress < 70) return "Searching news sources";
-        if (progress < 85) return "Processing results";
-        if (progress < 100) return "Validating news items";
-        return "Complete";
     }
 
     @FXML
     private void onUseSelectedNews() {
         if (newsAiResponse == null || txtMessage == null) return;
-
         Toggle toggle = newsAiResponse.getSelectedToggle();
         if (toggle == null) return;
-
         for (int i = 0; i < newsSlots.length; i++) {
             if (newsSlots[i] == toggle && i < storedNewsItems.size()) {
                 loadNewsToMessage(i);
                 break;
             }
         }
-    }
-
-    private void setAiLoading(boolean loading) {
-        if (aiLoadingBox != null) {
-            aiLoadingBox.setVisible(loading);
-            aiLoadingBox.setManaged(loading);
-        }
-        if (btnGenerateNews != null) btnGenerateNews.setDisable(loading);
-        if (cbNewsTopic != null) cbNewsTopic.setDisable(loading);
     }
 
     private void updateAiResponseVisibility(boolean visible) {
@@ -949,128 +840,103 @@ public class SendSMSController implements Initializable {
             btnUseSelectedNews.setManaged(visible);
             btnUseSelectedNews.setDisable(!visible);
         }
+        // Show/hide individual slots so the layout collapses cleanly
         for (RadioButton slot : newsSlots) {
-            if (slot != null) {
-                slot.setVisible(visible);
-                slot.setManaged(visible);
-            }
+            if (slot == null) continue;
+            slot.setVisible(visible);
+            slot.setManaged(visible);
         }
-        if (!visible && newsAiResponse != null) {
-            newsAiResponse.selectToggle(null);
-        }
+        if (!visible && newsAiResponse != null) newsAiResponse.selectToggle(null);
     }
 
-    // =======================================================
+    // ─────────────────────────────────────────────────────────────────────────
     // SMS LOADING UI
-    // =======================================================
+    // ─────────────────────────────────────────────────────────────────────────
+
     private void setSmsLoading(boolean loading) {
         if (smsLoadingBox != null) {
             smsLoadingBox.setVisible(loading);
             smsLoadingBox.setManaged(loading);
         }
-        if (btnSendSMS != null) btnSendSMS.setDisable(loading);
-        if (txtMessage != null) txtMessage.setDisable(loading);
+        if (btnSendSMS  != null) btnSendSMS.setDisable(loading);
+        if (txtMessage  != null) txtMessage.setDisable(loading);
     }
 
-    // =======================================================
-    // SEND SMS LOGIC
-    // =======================================================
+    // ─────────────────────────────────────────────────────────────────────────
+    // SEND SMS
+    // ─────────────────────────────────────────────────────────────────────────
+
     @FXML
     private void onSendSMS() {
         if (txtMessage == null || txtMessage.getText().trim().isEmpty()) {
             AlertDialogManager.showError("Empty Message", "Please enter message content.");
             return;
         }
-
         String group = (cbSelectBeneficiary != null) ? cbSelectBeneficiary.getValue() : null;
         if (group == null) {
-            AlertDialogManager.showError("No Group", "Select recipient group.");
+            AlertDialogManager.showError("No Group", "Select a recipient group.");
             return;
         }
-
         String method = (rbGsm != null && rbGsm.isSelected()) ? "GSM" : "API";
-
         List<BeneficiaryModel> recipients = getRecipients(group);
         if (recipients.isEmpty()) {
-            AlertDialogManager.showError("No Recipients", "No valid recipients found for this selection.");
+            AlertDialogManager.showError("No Recipients",
+                    "No valid recipients found for this selection.");
             return;
         }
-
         boolean confirmed = AlertDialogManager.showConfirmation(
                 "Confirm Send",
-                "Send to " + recipients.size() + " recipient(s)?",
-                ButtonType.OK,
-                ButtonType.CANCEL
+                "Send to " + recipients.size() + " recipient(s) via " + method + "?",
+                ButtonType.OK, ButtonType.CANCEL
         );
-
-        if (confirmed) {
-            sendSMSToRecipients(recipients, txtMessage.getText(), method);
-        }
+        if (confirmed) sendSMSToRecipients(recipients, txtMessage.getText(), method);
     }
 
     private List<BeneficiaryModel> getRecipients(String group) {
         if (group == null) return List.of();
-
-        String base = group;
-        if (group.contains("(")) {
-            base = group.substring(0, group.indexOf("(")).trim();
-        }
-
-        switch (base) {
-            case "All Beneficiaries":
-                return beneficiaryDAO.getAllBeneficiaries();
-
-            case "By Barangay":
+        // Strip the count suffix added to "Selected Beneficiaries (N selected)"
+        String base = group.contains("(") ? group.substring(0, group.indexOf("(")).trim() : group;
+        return switch (base) {
+            case "All Beneficiaries"       -> beneficiaryDAO.getAllBeneficiaries();
+            case "By Barangay" -> {
                 String brgy = (cbSelectBarangay != null) ? cbSelectBarangay.getValue() : null;
-                return (brgy != null) ? beneficiaryDAO.getBeneficiariesByBarangay(brgy) : List.of();
-
-            case "By Disaster Area":
+                yield brgy != null ? beneficiaryDAO.getBeneficiariesByBarangay(brgy) : List.of();
+            }
+            case "By Disaster Area" -> {
                 DisasterModel d = (cbSelectDisaster != null) ? cbSelectDisaster.getValue() : null;
-                return (d != null) ? beneficiaryDAO.getBeneficiariesByDisaster(d.getDisasterId()) : List.of();
-
-            default:
-                if (base.startsWith("Selected Beneficiaries")) {
-                    return new ArrayList<>(selectedBeneficiariesList);
-                }
-                return List.of();
-        }
+                yield d != null ? beneficiaryDAO.getBeneficiariesByDisaster(d.getDisasterId()) : List.of();
+            }
+            default -> base.startsWith("Selected Beneficiaries")
+                    ? new ArrayList<>(selectedBeneficiariesList)
+                    : List.of();
+        };
     }
 
     private void sendSMSToRecipients(List<BeneficiaryModel> recipients, String message, String method) {
         setSmsLoading(true);
-
-        MainFrameController main = MainFrameController.getInstance();
         int total = recipients.size();
 
+        MainFrameController main = MainFrameController.getInstance();
         if (main != null) {
             main.showSmsProgress("Sending SMS (" + method + ")", total);
             main.setSmsCount(0, total);
         }
 
-        SmsServiceImpl impl = (smsService instanceof SmsServiceImpl) ? (SmsServiceImpl) smsService : null;
-
-        if (impl != null) {
+        if (smsService instanceof SmsServiceImpl impl) {
             impl.setBulkProgressListener(new BulkProgressListener() {
                 @Override
-                public void onProgress(int done, int total, int successCount, String m) {
+                public void onProgress(int done, int tot, int successCount, String m) {
                     Platform.runLater(() -> {
-                        MainFrameController mf = MainFrameController.getInstance();
-                        if (mf != null) mf.setSmsCount(done, total);
+                        if (main != null) main.setSmsCount(done, tot);
                     });
                 }
-
                 @Override
-                public void onFinished(int total, int successCount, String m) {
+                public void onFinished(int tot, int successCount, String m) {
                     Platform.runLater(() -> {
                         setSmsLoading(false);
-
-                        MainFrameController mf = MainFrameController.getInstance();
-                        if (mf != null) mf.hideSmsProgress();
-
-                        AlertDialogManager.showSuccess(
-                                "Send Complete",
-                                successCount + " of " + total + " messages sent. (" + m + ")"
-                        );
+                        if (main != null) main.hideSmsProgress();
+                        AlertDialogManager.showSuccess("Send Complete",
+                                successCount + " of " + tot + " messages sent. (" + m + ")");
                         loadSMSLogs();
                     });
                 }
@@ -1078,21 +944,17 @@ public class SendSMSController implements Initializable {
         }
 
         Task<Void> task = new Task<>() {
-            @Override
-            protected Void call() {
+            @Override protected Void call() {
                 smsService.sendBulkSMS(recipients, message, method);
                 return null;
             }
         };
-
         task.setOnFailed(ev -> Platform.runLater(() -> {
             setSmsLoading(false);
-
-            MainFrameController mf = MainFrameController.getInstance();
-            if (mf != null) mf.hideSmsProgress();
-
+            if (main != null) main.hideSmsProgress();
             Throwable ex = task.getException();
-            AlertDialogManager.showError("Send Failed", ex != null ? ex.getMessage() : "Unknown error");
+            AlertDialogManager.showError("Send Failed",
+                    ex != null ? ex.getMessage() : "Unknown error");
             loadSMSLogs();
         }));
 
@@ -1102,26 +964,26 @@ public class SendSMSController implements Initializable {
     }
 
     private void updateSendButtonState() {
-        boolean enabled = false;
-
+        boolean enabled;
         if (rbApi != null && rbApi.isSelected()) {
             enabled = true;
         } else if (rbGsm != null && rbGsm.isSelected()) {
-            String port = (cbSelectPorts != null) ? cbSelectPorts.getSelectionModel().getSelectedItem() : null;
-            boolean validPort = port != null && !port.contains("No") && !port.contains("Error");
-            enabled = validPort && smsSender.isConnected();
+            String port = (cbSelectPorts != null)
+                    ? cbSelectPorts.getSelectionModel().getSelectedItem() : null;
+            enabled = port != null && !port.contains("No") && !port.contains("Error")
+                    && smsSender.isConnected();
+        } else {
+            enabled = false;
         }
-
         if (btnSendSMS != null) btnSendSMS.setDisable(!enabled);
     }
 
-    @FXML
-    private void onRefreshPorts() {
-        populateAvailablePorts();
-    }
+    // ─────────────────────────────────────────────────────────────────────────
+    // FXML-bound refresh handlers (wired via FXML onAction or setupEventHandlers)
+    // ─────────────────────────────────────────────────────────────────────────
 
-    @FXML
-    private void onDisconnect() {
+    @FXML private void onRefreshPorts()   { populateAvailablePorts(); }
+    @FXML private void onDisconnect() {
         if (smsSender != null && smsSender.isConnected()) {
             smsSender.disconnect();
             updateConnectionLabel("Disconnected", "orange");
